ops/webidl/test_cases_fail/enum_fields.stderr
error: variants with fields are not allowed for enum converters
 --> ../webidl/test_cases_fail/enum_fields.rs:9:9
  |
9 |   FooBar(u32),
  |         ^^^^^
